# RECUR

./: .dockerignore  .gitignore  CNAME  CONTRIBUTING.md  Dockerfile  Gemfile  LICENSE  MANIFEST.in  Makefile  README.md  _config.yml  about.markdown  badge-status.json  config.json  docker-compose.yml  index.markdown  multi-stage-recur.sh  pyproject.toml  recur.py  requirements.txt  requirements_dev.txt
.github/actions/cached-dependencies/: action.yml
.github/workflows/: recur-python-main.yml
ExampleData/: example_alignments.aln
_includes/: download-count.html  footer.html  head.html  header.html  social-item.html
_layouts/: base.html  default.html  download.html  home.html  index.html  page.html  post.html  release.html
_posts/: 2024-11-26-v0.0.0.markdown  2024-11-26-welcome-to-jekyll.markdown  2024-12-03-v0.0.0.markdown  2025-03-29-v1.0.0.markdown  2025-03-31-v1.0.0.markdown  2025-05-01-RECUR-v1.0.0.markdown
_sass/minima/: _base.scss  _layout.scss  custom-styles.scss  custom-variables.scss
assets/css/: styles.css
docs/: download.markdown  faq.markdown  installation.markdown  release.markdown  usage.markdown
minima/: _config.yml
minima/_includes/: footer.html  header.html
minima/_posts/: 2024-12-05-v1.0.0.markdown
src/recur/: __init__.py  _version.py  citation.py  helpinfo.py  logging_config.yaml
src/recur/genetic_codes/: codon10.txt  codon12.txt  codon13.txt  codon14.txt  codon16.txt  codon2.txt  codon21.txt  codon22.txt  codon23.txt  codon24.txt  codon25.txt  codon3.txt  codon4.txt  codon5.txt  codon6.txt  codon9.txt
src/recur/run/: __main__.py  run_commands.py
src/recur/utils/: analytic_tools.py  files.py  parallel_task_manager.py  process_args.py  util.py
tests/: conftest.py  test_recurrence.py
tests/benchmark/: example_alignments.aln.recur.tsv  pruned_random_tree_15.tree.txt
